[fix] fix overflow in landing bentos

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -699,6 +699,10 @@ p.lp{
   border-top: 1px solid #eee;
 }
 
+.card-text {
+  overflow-y: scroll;
+}
+
 [data-notify="progressbar"] {
 	margin-bottom: 0px;
 	position: absolute;
